remove rmutil dir

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,13 +21,10 @@ endif
 CFLAGS = -I$(RM_INCLUDE_DIR) -Wall -g -fPIC -lc -lm -std=gnu99  
 CC=gcc
 
-all: rmutil redisim.so
-
-rmutil: FORCE
-	$(MAKE) -C $(RMUTIL_LIBDIR)
+all: redisim.so
 
 redisim.so: module.o
-	$(LD) -o $@ module.o $(SHOBJ_LDFLAGS) $(LIBS) -L$(RMUTIL_LIBDIR) -lrmutil -lc 
+	$(LD) -o $@ module.o $(SHOBJ_LDFLAGS) $(LIBS) -L$(RMUTIL_LIBDIR) -lc 
 
 clean:
 	rm -rf *.xo *.so *.o rmutil/*.o
