--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "less": "^3.13.1",
+    "page": "^1.11.6",
     "svelte": "^3.49.0",
-    "vite": "^3.1.0"
+    "svelte-preprocess": "^4.10.7",
+    "vite": "^3.1.0",
+    "weui": "^2.5.14"
   }
 }
