--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "dayjs": "^1.11.5",
     "less": "^3.13.1",
     "page": "^1.11.6",
     "svelte": "^3.49.0",
