--- a/web/package.json
+++ b/web/package.json
@@ -17,5 +17,8 @@
     "svelte-preprocess": "^4.10.7",
     "vite": "^3.1.0",
     "weui": "^2.5.14"
+  },
+  "dependencies": {
+    "db.js": "^0.15.0"
   }
 }
