--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,13 +1,14 @@
-FROM redis:alpine as builder
+FROM redis:alpine3.19 as builder
 
-RUN apk add musl-dev gcc make
+RUN sed -i "s/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g" /etc/apk/repositories \
+  && apk add --no-cache musl-dev gcc make
 
 ADD --chown=redis . /server
 
 RUN cd /server && make
 
 
-FROM redis:alpine
+FROM redis:alpine3.19
 
 COPY --from=builder /server/redisim.so /usr/local/bin/redisim.so
 
